Chore: readme file generated and changed title to laundry wizard

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Ultimate Dry 5.0 </title>
+    <title>Laundry Wizard 5.0 </title>
     <style>
         /* --- THE SETUP --- */
         body { 
@@ -64,7 +64,7 @@
 <div id="effects" class="effect-layer"></div>
 
 <div class="app-card">
-    <h1>🌤️ Ultimate Dry 5.0</h1>
+    <h1>🌤️ Laundry Wizard 5.0</h1>
     
     <div>
         <input type="text" id="cityInput" placeholder="Enter Location (e.g. London)">
